profile: fixed landing resize when sidebar collapses. fixed animations to work in sync

--- a/client/stylus/app.user.styl
+++ b/client/stylus/app.user.styl
@@ -50,7 +50,7 @@
   height                100%
   width                 160px
   width                 50px
-  vendor transition, width 0.2s linear
+  vendor transition, width 0.6s ease-in-out
   fl()
   &.collapsed
     .profile-avatar
@@ -63,7 +63,7 @@
     background-repeat     no-repeat
     vendor background-size, 160px auto
     shadow                inset 0 0 13px 0 rgba(0,0,0,0.6)
-    vendor transition, margin-left 0.2s linear
+    vendor transition, margin-left 0.6s ease-in-out
 
 
 .profile-buttons
@@ -73,7 +73,7 @@
   bg color,             rgba(0,0,0,0.2)
 
 .profile-content-wrapper
-  vendor transition, margin-left 0.2s linear
+  vendor transition, margin-left 0.6s ease-in-out
   margin-left           160px
   margin-left           50px
   height                100%
